Fixed homepage overflow hidden bug

--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -6,6 +6,7 @@
     .container {
         background: $crimson;
         padding: 0;
+        overflow: hidden;
         .contactForm {
             float: left;
             width: 50%;
